--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <meta property="og:title" content="2048 5D game"/>
   <meta property="og:site_name" content="2048 5D game"/>
   <meta property="og:description" content="Join the numbers and get to the 2048 tile in 5-dimensions! Careful: this game is extremely addictive!"/>
-  <meta property="og:image" content="http://cesarkawakami.github.io/2048-5D/meta/og_image.png"/>
+  <meta property="og:image" content="meta/og_image.png"/>
 </head>
 <body>
   <div class="container">
@@ -99,10 +99,6 @@
     <p>
     <a href="http://gabrielecirulli.github.io/2048/">Original</a> created by <a href="http://gabrielecirulli.com" target="_blank">Gabriele Cirulli.</a> Based on <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a>
     </p>
-    <div class="sharing">
-      <a href="https://twitter.com/share" class="twitter-share-button" data-text="Check out 2048-5D, a game where you join numbers to score high! #20485dgame" data-via="cesarkawakami" data-url="http://bit.ly/2048-5D" data-counturl="http://cesarkawakami.github.io/2048-5D/">Tweet</a>
-      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-    </div>
   </div>
 
   <script src="js/animframe_polyfill.js"></script>
@@ -114,15 +110,5 @@
   <script src="js/game_manager.js"></script>
   <script src="js/application.js"></script>
 
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-49083607-1', 'cesarkawakami.github.io');
-  ga('send', 'pageview');
-
-</script>
 </body>
 </html>
