working reset button. Helpful for when browser's refresh button will no longer guarantee you a fresh new game. 😉

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <div class="heading">
       <h1 class="title">2048 5D</h1>
       <div class="scores-container">
+        <a class="reset-button button">Reset Game</a>
         <div class="score-container">0</div>
         <div class="best-container">0</div>
       </div>
