--- a/index.html
+++ b/index.html
@@ -103,6 +103,8 @@
   </div>
 
   <script src="js/animframe_polyfill.js"></script>
+  <script src="js/lz-string.min.js"></script>
+  <script src="js/cycle.js"></script>
   <script src="js/keyboard_input_manager.js"></script>
   <script src="js/html_actuator.js"></script>
   <script src="js/grid.js"></script>
